objects/FeeStructure__c.object
<CustomObject>
    <fields>
        <fullName>Bps__c</fullName>
        <description>Basis Points</description>
        <inlineHelpText>Basis Points</inlineHelpText>
        <label>Bps</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RangeFrom__c</fullName>
        <description>The first number in the range of the Fee Structure.</description>
        <inlineHelpText>The first number in the range of the Fee Structure.</inlineHelpText>
        <label>Range From</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RangeTo__c</fullName>
        <description>The last number in the range of the Fee Structure.</description>
        <inlineHelpText>The last number in the range of the Fee Structure.</inlineHelpText>
        <label>Range To</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>Master Detail relationship field between Fee Structure Object and Opportunity Object.</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Fee Structure</relationshipLabel>
        <relationshipName>FeeStructure</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <description>Fee structure range and associated basis points for Institutional opportunities.</description>
    <label>Fee Structure</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Fee Structure #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fee Structure</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>